--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
         <meta charset="UFT-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Are You Smarter Than A 5th Grader? - A Coding Quiz</title>
-        <link rel="stylesheet"
+        <link rel="stylesheet" href="./assets/CSS/style.css"
     </head>
 
     <body>
         <div>
-            <div id="row1">
+            <header id="row1">
                 <h1>Are You Smarter Than A 5th Grader?</h1>
-            </div>
+            </header>
             <div id="row2">
                 <h2 id="scores">View High Score</h2>
-                <img src="" alt="" />
+                <img src="./assets/images/Starry night hourglass.gif" alt="" />
             </div>
             <div id="row3">
                 <h3>ADD QUIZ QUESTIONS</h3>
             </div>
             <div>
-                <!-- ADD BUTTON -->
+                <h4 id="button">Begin</h4>
             </div>
+            <footer>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4qkYiZablQoG7f0Qu4Nd1c?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </footer>
         </div>
     </body>
 </html>
