Added a nav bar and changed the order of the nav bar elements

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 
     <body>
         <div id="container">
-            <header id="row1">
-                <h1>Are You Smarter Than A 5th Grader?</h1>
-            </header>
-            
-            <div id="row2">
-                <h2 class="scores">View High Score</h2>
-                <h2 id="high-score">369</h2>                                   <!--Hook for high score value -->
-                <h2 id="timer">60 seconds left</h2>                                        <!--Hook for timer value-->
+            <nav >
                 <img src="./assets/images/Starry night hourglass.gif" alt="animated hourglass timer in outer space" id="hourglass" />
+                <p id="timer">60 seconds left</p>                                        <!--Hook for timer value-->
+                <a>
+                    <p class="scores">View High Scores</p>
+                </a>
+                <p id="high-score">369</p>                                   <!--Hook for high score value -->                
+            </nav>
+            <div id="row1">
+                <h1>Are You Smarter Than A 5th Grader?</h1>
             </div>
 
             <div id="row3">
@@ -25,7 +26,7 @@
                     <h3 id="question">ADD QUIZ QUESTIONS</h3>                   <!--Hook for questions-->
                     <div class="question-area" id="question-section">
                         <ul id="answers">                                       <!--Hook for list of answers-->
-                            Enter Answers Here
+                            List of Answers with id corresponding to option a,b,c,d,e
                         </ul>
                     </div>
                 </div>
