Changed the h3 begin button id to a class and added styling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 
                 <div class="question-area">
-                    <h3 id="button">Begin</h4>
+                    <h3 class="button">Begin</h4>
                 </div>
             </div>
             
