JavaScript-Timer: Added variables and started working on the timer

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div id="container">
             <nav >
                 <img src="./assets/images/Starry night hourglass.gif" alt="animated hourglass timer in outer space" id="hourglass" />
-                <p id="timer">60 seconds left</p>                                        <!--Hook for timer value-->
+                <p id="timer"></p>                                        <!--Hook for timer value-->
                 <p class="scores">View High Scores</p>
-                <p id="high-score">369</p>                                   <!--Hook for high score value -->                
+                <p id="high-score"></p>                                   <!--Hook for high score value -->                
             </nav>
             <div id="row1">
                 <h1>Are You Smarter Than A 5th Grader?</h1>
@@ -38,5 +38,6 @@
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4qkYiZablQoG7f0Qu4Nd1c?utm_source=generator" width="21%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </footer>
         </div>
+        <script src="./assets/Javascript/script.js"></script>
     </body>
 </html>
