JavaScript-Questions: Worked on for loop for question answer choices

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
                 <div class="question-area">
                     <h2 id="question">ADD QUIZ QUESTIONS</h3>                   <!--Hook for questions-->
                     <div class="question-area" id="question-section">
-                        <ul id="answers">                                       <!--Hook for list of answers-->
-                            List of Answers with id corresponding to option a,b,c,d,e
-                        </ul>
+                        <ul id="answers"></ul>                                  <!--Hook for list of answers-->  
                     </div>
                 </div>
                 
