Added li elements to HTML, created checkAnswer function and worked onquiz function

--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
 
             <div id="row3">
                 <div class="question-area">
-                    <h2 id="question">ADD QUIZ QUESTIONS</h3>                   <!--Hook for questions-->
+                    <h2 id="question"></h3>                   <!--Hook for questions-->
                     <div class="question-area" id="question-section">
-                        <ul id="answers"></ul>                                  <!--Hook for list of answers-->  
+                        <ul id="answers">                           <!--Hooks for list of answers-->
+                            <li id="a"></li>
+                            <li id="b"></li>
+                            <li id="c"></li>
+                            <li id="d"></li>                                
+                        </ul>                                    
                     </div>
                 </div>
                 
