Updated the questions and multipleChoice objects to arrays.Updated quiz function and created ansA,ansB,ansC, and ansD functions

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 </div>
                 
                 <div class="question-area">
+                    <img src="" id="resultsImg">
                     <h3 class="button">Begin</h4>
                 </div>
             </div>
