--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
                     </div>
                 </div>
                 
-                <div class="question-area">
-                    <img src="" id="resultsImg">
+                <div class="question-area button-div">
+                    <img src="./assets/images/Correct.gif" id="correctImg">
+                    <img src="./assets/images/HeyArnold-wrong-answer.gif" id="wrongImg">
+
                     <h3 class="button">Begin</h4>
                 </div>
             </div>
