JavaScript-Questions: Worked on savings score and initials to localStorage. Added a hover background color to all list items and fixed quiz function to return correctCounter

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <h2 id="question"></h3>                   <!--Hook for questions-->
                     <div class="question-area" id="question-section">
                         <ul id="answers">                           <!--Hooks for list of answers-->
-                            <li id="a"></li>
-                            <li id="b"></li>
-                            <li id="c"></li>
-                            <li id="d"></li>                                
+                            <li id="a" class="choice"></li>
+                            <li id="b" class="choice"></li>
+                            <li id="c" class="choice"></li>
+                            <li id="d" class="choice"></li>                                
                         </ul>                                    
                     </div>
                 </div>
