--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 </div>
                 
                 <div class="question-area button-div">
-                    <img src="./assets/images/Correct.gif" id="correctImg">
-                    <img src="./assets/images/HeyArnold-wrong-answer.gif" id="wrongImg">
+                    <!-- <img src="./assets/images/Correct.gif" id="correctImg">
+                    <img src="./assets/images/HeyArnold-wrong-answer.gif" id="wrongImg"> -->
 
                     <h3 class="button">Begin</h4>
                 </div>
